<resources>
    <string name="app_name">Mealer App</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in_btn">Sign In</string>
    <string name="login_register">Register</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string-array name="banning_time">
        <item>1 Week</item>
        <item>2 Week</item>
        <item>1 Month</item>
        <item>2 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
    </string-array>
    <string name="upload_a_picture_of_a_void_cheque">Void Cheque</string>
     <string name="finish">Finish</string>
     <string name="register_address">Register Address</string>
     <string name="title_activity_cook_registration">cookRegistration</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
</resources>