<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="117dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="403dp"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="173dp"
        android:layout_height="57dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="213dp"
        android:text="@string/login_sign_in_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="164dp"
        android:text="@string/login_register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

</androidx.constraintlayout.widget.ConstraintLayout>