<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/payment_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="88dp"
        android:text="Register Cook"
        android:textColor="#0C7489"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/register_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/image_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/upload_a_picture_of_a_void_cheque"
        app:layout_constraintEnd_toEndOf="@+id/add_image_button"
        app:layout_constraintStart_toStartOf="@+id/add_image_button"
        app:layout_constraintTop_toBottomOf="@+id/add_image_button" />

    <ImageView
        android:id="@+id/add_image_button"
        android:layout_width="93dp"
        android:layout_height="89dp"
        android:background="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/next_button_cook"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/finish"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <EditText
        android:id="@+id/register_address_cook"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/register_address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="108dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/void_cheque"
        tools:layout_editor_absoluteY="331dp" />

</androidx.constraintlayout.widget.ConstraintLayout>